possible fix for OSx not showing scrollbar on select list

--- a/istopics/css/istopics.css
+++ b/istopics/css/istopics.css
@@ -22,3 +22,16 @@ margin: 0 auto -4em;
 .footer, .push {
 height: 4em;
 }
+
+/*
+* Force the scrollbar to appear in OSx 
+*/
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
